--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/Theme.AppCompat.NoActionBar"
-
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".MainActivity"
+            android:name=".ShopActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -32,7 +30,8 @@
             android:name=".CreateList"
             android:label="@string/title_activity_create_list"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".BasketActivity"></activity>
+        <activity android:name=".BasketActivity" />
+        <activity android:theme="@style/Theme.AppCompat.NoActionBar"  android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
