--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,11 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ShopActivity"
+            android:name=".ContinerActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,7 +30,11 @@
             android:label="@string/title_activity_create_list"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".BasketActivity" />
-        <activity android:theme="@style/Theme.AppCompat.NoActionBar"  android:name=".MainActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".InvitesActivity" />
+        <activity android:name=".ShopActivity"></activity>
     </application>
 
 </manifest>
