--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ContinerActivity"
+            android:name=".SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,11 +30,15 @@
             android:name=".CreateList"
             android:label="@string/title_activity_create_list"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".BasketActivity" />
+        <activity
+            android:name=".BasketActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".InvitesActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:theme="@style/AppTheme.NoActionBar" android:name=".ContinerActivity"/>
     </application>
 
 </manifest>
