--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
