--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.karumi:dexter:5.0.0'
 }
