--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.karumi:dexter:5.0.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
