--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,12 @@ dependencies {
     implementation 'com.google.android:flexbox:0.3.2'
     implementation 'com.android.support:design:28.0.0-alpha1'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+ //  implementation 'com.google.firebase:firebase-ads:17.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
+ //   implementation 'com.google.firebase:firebase-core:16.0.7'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
